--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support." />
+    <meta
+      name="description"
+      content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
+    />
     <title>NexLead Solutions | Business Process Outsourcing</title>
     <!-- Facebook Pixel Code would go here in production -->
   </head>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {},
+      Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = "https://embed.tawk.to/686c33fa65db7e1911cf0913/1ivjam2u2";
+      s1.charset = "UTF-8";
+      s1.setAttribute("crossorigin", "*");
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
