google sheets record integration

--- a/index.html
+++ b/index.html
@@ -10,6 +10,31 @@
     />
     <title>NexLead Solutions | Business Process Outsourcing</title>
     <!-- Facebook Pixel Code would go here in production -->
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="NexLead Solutions | Business Process Outsourcing"
+    />
+    <meta
+      property="og:description"
+      content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
+    />
+    <meta property="og:image" content="./public/logo.png" />
+    <meta property="og:url" content="https://nexleadsolutions.co/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="NexLead Solutions | Business Process Outsourcing"
+    />
+    <meta
+      name="twitter:description"
+      content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
+    />
+    <meta name="twitter:image" content="./public/logo.png" />
   </head>
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
