--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       property="og:description"
       content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
     />
-    <meta property="og:image" content="./public/logo.png" />
+    <meta
+      property="og:image"
+      content="https://nexleadsolutions.co/images/logo.png"
+    />
     <meta property="og:url" content="https://nexleadsolutions.co/" />
     <meta property="og:type" content="website" />
 
@@ -34,7 +37,10 @@
       name="twitter:description"
       content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
     />
-    <meta name="twitter:image" content="./public/logo.png" />
+    <meta
+      name="twitter:image"
+      content="https://nexleadsolutions.co/images/logo.png"
+    />
   </head>
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
