seo keywords addition

--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
+      content="NexLead Solutions offers Business Process Outsourcing (BPO) services, including sales outsourcing, customer experience outsourcing, AI-powered automation, and scalable business solutions to drive revenue growth. Discover our BPO solutions for customer service, AI contact centers, and more."
     />
-    <title>NexLead Solutions | Business Process Outsourcing</title>
+    <title>
+      NexLead Solutions | Business Process Outsourcing (BPO), Outsourcing
+      Services, AI Contact Center
+    </title>
     <!-- Facebook Pixel Code would go here in production -->
 
     <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="NexLead Solutions | Business Process Outsourcing"
+      content="NexLead Solutions | Business Process Outsourcing (BPO), Outsourcing Services, AI Contact Center"
     />
     <meta
       property="og:description"
-      content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
+      content="NexLead Solutions provides BPO solutions, sales outsourcing, customer experience outsourcing, customer service BPO, and AI-powered automation for scalable business growth."
     />
     <meta
       property="og:image"
@@ -31,11 +34,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="NexLead Solutions | Business Process Outsourcing"
+      content="NexLead Solutions | Business Process Outsourcing (BPO), Outsourcing Services, AI Contact Center"
     />
     <meta
       name="twitter:description"
-      content="NexLead Solutions - Business Process Outsourcing services to help your business scale faster. Outbound calling, lead generation, and 24/7 support."
+      content="Explore our BPO solutions: sales outsourcing, customer service BPO, AI in BPO, and scalable business solutions for revenue growth."
     />
     <meta
       name="twitter:image"
