--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="NexLead Solutions offers Business Process Outsourcing (BPO) services, including sales outsourcing, customer experience outsourcing, AI-powered automation, and scalable business solutions to drive revenue growth. Discover our BPO solutions for customer service, AI contact centers, and more."
+      content="NexLead is your growth autopilot—an elite platform fusing advanced AI with human expertise to elevate your business to new heights of performance, efficiency, and scale. Experience the future of business growth with visionary automation and human + AI hybrid intelligence."
     />
-    <title>
-      NexLead Solutions | Business Process Outsourcing (BPO), Outsourcing
-      Services, AI Contact Center
-    </title>
+    <title>NexLead | AI-Powered Growth Autopilot for Modern Business</title>
     <!-- Facebook Pixel Code would go here in production -->
 
     <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="NexLead Solutions | Business Process Outsourcing (BPO), Outsourcing Services, AI Contact Center"
+      content="NexLead | AI-Powered Growth Autopilot for Modern Business"
     />
     <meta
       property="og:description"
-      content="NexLead Solutions provides BPO solutions, sales outsourcing, customer experience outsourcing, customer service BPO, and AI-powered automation for scalable business growth."
+      content="Discover how NexLead combines human brilliance and AI automation to transform, scale, and future-proof your business. Premium automation, strategic insight, and effortless growth—on autopilot."
     />
     <meta
       property="og:image"
@@ -34,11 +31,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="NexLead Solutions | Business Process Outsourcing (BPO), Outsourcing Services, AI Contact Center"
+      content="NexLead | AI-Powered Growth Autopilot for Modern Business"
     />
     <meta
       name="twitter:description"
-      content="Explore our BPO solutions: sales outsourcing, customer service BPO, AI in BPO, and scalable business solutions for revenue growth."
+      content="See how NexLead's AI + human hybrid platform elevates your business with intelligent automation, strategic transformation, and next-level efficiency."
     />
     <meta
       name="twitter:image"
